--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -122,11 +122,11 @@
               <dd>「支払い.com」を利用すれば、期限の迫った請求書も、<strong>支払いまで最長60日余裕をプラス。</strong> 資金繰りを改善し、借りずに事業を加速できます。<br> 必要なのはお手持ちのカードだけ。審査も書類も必要ありません。</dd>
 
               <div class="flex gap30 aiC sp-reverse">
-                <div class="sec-left-wrapper">
+                <div class="sec-left-wrapper visa">
                   <figure class="sec__img"><img src="/assets/img/common/cash-flow.png" alt=""></figure>
                 </div>
 
-                <div class="gap-10 sec-right-wrapper">
+                <div class="gap-10 sec-right-wrapper visa">
                   <div class="card-type18">
                     <div class="cat">利用可能ブランド</div>
 
@@ -203,7 +203,7 @@
                       </div>
                       <div class="box-item">
                         <dd>金利</dd>
-                        <h3 class="ttl-tertiary"><span class="text-yellow">2.8％～9.6%</span> 
+                        <h3 class="ttl-tertiary"><span class="text-yellow">2.8％～9.6%</span>
                           <small>※2</small>
                         </h3>
                       </div>
@@ -237,7 +237,9 @@
               </dd>
 
               <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/common/saison-03.png" alt=""></figure>
+                <div class="sec-left-wrapper">
+                  <figure class="sec__img"><img src="/assets/img/common/saison-03.png" alt=""></figure>
+                </div>
 
                 <div class="gap-10 sec-right-wrapper">
                   <dl class="flex aiC gap30 sec01-right-box">
@@ -276,46 +278,41 @@
                   </dl>
                 </div>
               </div>
+
+              <a href="#" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
             </div>
 
-            <a href="#" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="section-tertiary">
-    <div class="container-1200">
-      <div class="card-type21">
-        <div class="ttl-tertiary-wrapper">
-          <h3 class="ttl-tertiary border-bottom">資金繰りや資金調達にお悩みの方へ</h3>
+  <section id="application" class="section-contact2 fadein">
+    <div class="card-type22">
+      <h3 class="ttl-tertiary"><span><strong>素早く・手軽に解決できるサービス</strong>をご提供します</span>
+        <div class="tooltip">
+          <h4 class="tooltip__content">資金繰りや資金調達にお悩みの方へ</h4>
         </div>
-
-        <h2 class="ttl-secondary">
-          素早く・手軽に解決できるサービスをご提供します</h2>
-
-        <h3 class="ttl-tertiary fw-normal">
-          経営者様や個人事業主様にとって資金繰り改善や資金調達は、急ぎ解決したい課題だと思います。クレディセゾンはそういった方向けに
-          <strong>「素早く・手軽に解決できる」</strong>サービスをご提供しています。お気軽にご相談下さい。
-        </h3>
-
-        <div class="flex gap60 card-list">
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい資料が欲しい」
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="orange_more small show-arrow">サービス資料ダウンロード</a>
+      </h3>
+      <div class="useful-wp container">
+        <p class="description">
+          経営者様や個人事業主様にとって資金繰り改善や資金調達は、急ぎ解決したい課題だと思います。</br>
+          クレディセゾンはそのような方向けに「素早く・手軽に解決できる」サービスをご提供しています。お気軽にご相談ください。
+        </p>
+        <div class="containers">
+          <div class="flex jcC gap60">
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">「詳しい資料が欲しい」</br>という方はこちら</div>
+                <div><a href="#" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+              </summary>
           </div>
-
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい話を聞きたい」「相談したい」
-
-              <br>という方はこちら
-            </h3>
-
-            <a href="#" class="orange_more small show-arrow">サポート担当に無料で相談する</a>
+          <div href="#" class="card">
+            <summary class="card__box">
+              <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
+              <div><a href="#" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
+            </summary>
           </div>
         </div>
       </div>
