--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -292,6 +292,122 @@
   }
 }
 
+.section-contact2 {
+  background-image: url("/assets/img/common/contact_banner.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  padding: 170px 0 70px;
+
+  @media #{$sp} {
+    padding: 140px 0;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.55);
+  }
+
+  .card-type22 .useful-wp .containers .card .card__box {
+    padding: 38px 44px;
+    @media #{$sp} {
+      padding: 30px 15px;
+    }
+  }
+
+  .card-type22 {
+    background: unset;
+    padding: 0;
+    &::before {
+      display: none;
+    }
+    .ttl-tertiary {
+      width: fit-content;
+      margin-left: auto;
+      margin-right: auto;
+
+      span {
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 70%, #0297b5 0);
+      }
+
+      strong {
+        color: $yellow-color;
+      }
+    }
+
+    .description {
+      text-align: center;
+      font-size: 20;
+      color: $white-color;
+      margin-bottom: 60px;
+    }
+
+    .card__box {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      padding: 38px 44px;
+
+      @media #{$sp} {
+        padding: 30px 15px;
+      }
+
+      &--ttl {
+        font-size: 20px;
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+      }
+
+      &--cont {
+        margin-bottom: 30px;
+        .card__box--txt {
+          text-align: left;
+        }
+      }
+    }
+  }
+
+  .tooltip {
+    position: absolute;
+    top: -90px;
+    left: calc(50% - 181px);
+
+    @media #{$sp} {
+      top: -64px;
+    }
+
+    &__content {
+      position: relative;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 0 20px;
+      border: 1px solid $white-color;
+      color: $white-color;
+
+      &::before {
+        position: absolute;
+        content: "\A";
+        top: calc(100% - 1px);
+        left: calc(50% - 15px);
+        width: 0;
+        height: 0;
+        border-left: 15px solid rgba(0, 0, 0, 0);
+        border-right: 15px solid rgba(0, 0, 0, 0);
+        border-top: 10px solid $white-color;
+      }
+    }
+  }
+}
+
 .section-voice {
   text-align: center;
   padding: 70px 0;
