--- a/app/assets/scss/4-pages/_cospro.scss
+++ b/app/assets/scss/4-pages/_cospro.scss
@@ -404,6 +404,8 @@
       background: #e5f4f8;
       padding: 50px;
       margin-bottom: 40px;
+      box-shadow: 0px 3px 20px #00000029;
+      border-radius: 3px;
 
       .step-title {
         display: flex;
