--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -26,31 +26,31 @@
 {% set menuSidebar = [
   {
   text: "TOP",
-  link: "/"
+  link: "#top"
   },
   {
   text: "CosProとは",
-  link: "#"
+  link: "#cospro-index"
   },
   {
   text: "CosProの特長",
-  link: "#"
+  link: "#cospro-feature"
   },
   {
   text: "法人カード会員特典",
-  link: "#"
+  link: "#membership"
   },
   {
   text: "ご利用までの流れ",
-  link: "#"
+  link: "#flow-usage"
   },
   {
   text: "よくある質問",
-  link: "#"
+  link: "#faq"
   },
   {
   text: "資料・お問い合わせ",
-  link: "#"
+  link: "#contact"
   }
   ] %}
 
@@ -99,7 +99,7 @@
     </div>
   </section>
 
-  <section class="section-secondary">
+  <section id="cospro-index" class="section-secondary">
     <div class="containers">
       <h4 class="ttl-tertiary">CosProとは</h4>
       <h2 class="ttl-primary">初期費用・ランニングコスト無料の法人向け出張手配サービスです。</h2>
@@ -180,7 +180,7 @@
     </div>
   </section>
 
-  <section class="section-senary">
+  <section id="cospro-feature" class="section-senary">
     <div class="containers">
       <h4 class="ttl-tertiary">CosProの特長</h4>
       <h2 class="ttl-primary">出張手配の問題、すべて解決いたします!</h2>
@@ -280,7 +280,7 @@
     </div>
   </section>
 
-  <section class="section-septenary">
+  <section id="membership" class="section-septenary">
     <div class="containers">
       <h4 class="ttl-tertiary">法人カード会員特典</h4>
       <h2 class="ttl-primary">クレディセゾンの法人向けカード会員様限定の特典をご用意しています。</h2>
@@ -312,7 +312,7 @@
     </div>
   </section>
 
-  <section class="section-quinary">
+  <section id="flow-usage" class="section-quinary">
     <div class="containers">
       <h5 class="ttl-tertiary">ご利用までの流れ</h5>
       <h1 class="ttl-primary">ご利用開始まで営業担当がフォローいたします。</h1>
@@ -367,7 +367,7 @@
     </div>
   </section>
 
-  <section class="section-question-and-answer">
+  <section id="faq" class="section-question-and-answer">
     <div class="containers">
       <h5 class="ttl-sub">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
@@ -403,7 +403,7 @@
     </div>
   </section>
 
-  <section class="section-contact section">
+  <section id="contact" class="section-contact section">
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
       <h3 class="ttl-tertiary">CosProをご検討中の方へ</h3>
