--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -415,32 +415,33 @@
       </div>
     </div>
   </section>
-  <section class="section-tertiary">
-    <div class="container-1200">
-      <div class="card-type21">
-        <div class="ttl-tertiary-wrapper">
-          <h3 class="ttl-tertiary border-bottom">業務効率化をご検討中の中小企業・個人事業主の皆様へ</h3>
-        </div>
-        <h2 class="ttl-secondary">
-          「わかりやすい効果」と「メリット」をご提供します
-        </h2>
-        <h3 class="ttl-tertiary fw-normal">
-          業務効率化の取り組み方がわからなかったり、取り組んでもあまり効果が得られなかったりする方も多いのではないでしょうか。<br>
-          クレディセゾンはそのような方向けに <strong>「今すぐ始められる」＆「わかりやすい効果とメリット」</strong>をご提供いたします。<br>
-          お気軽にご相談ください。
-        </h3>
-        <div class="flex gap60 card-list">
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい資料が欲しい」
-              <br>という方はこちら
-            </h3>
-            <a href="#" class="blue_gradient_btn small">サービス資料ダウンロード</a>
+  <section id="application" class="section-contact2 fadein">
+    <div class="card-type22">
+    <h3 class="ttl-tertiary">
+      <span><strong>「わかりやすい効果」</strong>と<strong>「メリット」</strong>をご提供します</span>
+      <div class="tooltip">
+        <h4 class="tooltip__content">業務効率化をご検討中の中小企業・個人事業主の皆様へ</h4>
+      </div>
+    </h3>
+    <div class="useful-wp container">
+      <p class="description">
+        業務効率化の取り組み方がわからなかったり、取り組んでもあまり効果が得られなかったりする方も多いのではないでしょうか。<br>
+        クレディセゾンはそのような方向けに <strong>「今すぐ始められる」＆「わかりやすい効果とメリット」</strong>をご提供いたします。<br>
+        お気軽にご相談ください。
+      </p>
+      <div class="containers">
+        <div class="flex jcC gap60">
+          <div href="#" class="card">
+            <summary class="card__box">
+              <div class="card__box--ttl">「詳しい資料が欲しい」</br>という方はこちら</div>
+              <div><a href="#" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+            </summary>
           </div>
-          <div class="card">
-            <h3 class="ttl-tertiary">「詳しい話を聞きたい」「相談したい」
-              <br>という方はこちら
-            </h3>
-            <a href="#" class="blue_gradient_btn small">サポート担当に無料で相談する</a>
+          <div href="#" class="card">
+            <summary class="card__box">
+              <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
+              <div><a href="#" class="blue_gradient_btn" href="#">サポート担当に無料で相談する</a></div>
+            </summary>
           </div>
         </div>
       </div>
