--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -599,35 +599,15 @@
             }
             .card-container {
               display: flex;
+              align-items: center;
               gap: 20px;
               padding: 30px;
               .card-image {
                 width: 100px;
                 height: 100px;
-                border: 1px solid #bfbfbf;
+                // border: 1px solid #bfbfbf;
                 border-radius: 50%;
-                background-size: contain;
-                background-repeat: no-repeat;
                 margin: 0;
-                &.s1 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_1.png");
-                }
-                &.s2 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_2.png");
-                }
-                &.s3 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_3.png");
-                  background-position: center;
-                }
-                &.s4 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_4.png");
-                }
-                &.s5 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_5.png");
-                }
-                &.s6 {
-                  background-image: url("/assets/img/saison_welfare/welfare_support_6.png");
-                }
               }
               .card-description {
                 text-align: left;
@@ -665,7 +645,81 @@
     }
   }
 
-  .section-senary {  
+  .section-quaternary {
+    padding: 70px 0;
+
+    @media #{$sp} {
+      padding: 35px 15px;
+    }
+
+    .container {
+      @media #{$sp} {
+        margin: 0 -15px;
+      }
+    }
+
+    .saison-feature-list {
+      display: grid;
+      gap: 40px;
+      .card-type25 {
+        .card-heading {
+          gap: 20px;
+          flex-direction: column;
+          .card-issue-title {
+            color: $black-color;
+          }
+        }
+        .card-solution-title {
+          margin: 40px 0 20px;
+        }
+        .card-solution-list {
+          display: flex;
+          li {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            img {
+              width: 100%;
+              height: 110px;
+            }
+            span {
+              color: $primary-color;
+              font-size: 16px;
+              font-weight: bold;
+            }
+          }
+          @media #{$sp} {
+            flex-direction: column;
+          }
+        }
+        .ttl-quaternary {
+          font-size: 16px;
+          padding: 40px 0 60px;
+        }
+        .card-solution-content__text {
+          font-size: 16px;
+          padding-top: 0;
+        }
+      }
+
+      .preferential-service {
+        &-title {
+          color: $white-color;
+          padding: 16px 0;
+          font-size: 20px;
+          font-weight: bold;
+          text-align: center;
+          border-radius: 3px;
+          background-color: $black-color;
+        }
+      }
+      @media #{$sp} {
+        gap: 20px;
+      }
+    }
+  }
+
+  .section-senary {
     padding: 70px 0;
     .ttl-tertiary {
       line-height: 28px;
@@ -763,7 +817,7 @@
         padding: 20px 37px;
         white-space: nowrap;
         background: $gradient-bg;
-  
+
         &-tooltip {
           position: absolute;
           width: auto;
@@ -771,11 +825,11 @@
           white-space: nowrap;
           left: 50%;
           transform: translateX(-50%);
-  
+
           @media #{$sp} {
             top: -90px;
           }
-  
+
           &__content {
             position: relative;
             width: fit-content;
@@ -787,15 +841,15 @@
             border: 1px solid $primary-color;
             color: $primary-color;
             padding: 10px 20px;
-  
+
             display: flex;
             align-items: center;
             justify-content: center;
-  
+
             @media #{$sp} {
               white-space: pre;
             }
-  
+
             &::before {
               position: absolute;
               content: "\A";
