--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -231,7 +231,98 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-quaternary"></section>
+  <section class="section-quaternary fadein">
+    <h5 class="ttl-notice">セゾンフクリコの特長</h5>
+    <h1 class="ttl-primary">従業員はもちろん、会社にもうれしい福利厚生サービスです。</h1>
+    <div class="container">
+      <ul class="saison-feature-list">
+        <li class="card-type25">
+          <div class="card-heading">
+            <span class="card-index">特長①</span>
+            <h3 class="card-issue-title">全国を網羅した豊富な特別優待メニューを簡略化！</h3>
+          </div>
+          <div class="triangle"></div>
+          <h1 class="card-solution-title">全国25,000以上の施設が最大66%OFFで利用できます</h1>
+          <ul class="card-solution-list">
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_1.png" alt="welfare support 1">
+              <span>レジャー</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_2.png" alt="welfare support 2">
+              <span>グルメ</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_3.png" alt="welfare support 3">
+              <span>ビューティー</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_4.png" alt="welfare support 4">
+              <span>スポーツ</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_5.png" alt="welfare support 5">
+              <span>キャリア</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_6.png" alt="welfare support 6">
+              <span>ライフ サポート</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_7.png" alt="welfare support 7">
+              <span>セレモニー</span>
+            </li>
+            <li>
+              <img src="/assets/img/saison_welfare/welfare_feature_8.png" alt="welfare support 8">
+              <span>トラベル</span>
+            </li>
+          </ul>
+          <h4 class="ttl-quaternary">
+            レジャーや健康増進、食事や旅行のシーンで利用できる優待など、従業員の方々が利用しやすい多彩な優待を取り揃えています。
+          </h4>
+          {# <div class="preferential-service">
+            <div class="preferential-service-title">優待サービス一例</div>
+            <div class="preferential-service-conent">
+              <li>
+                <a href="#">
+                  <img src="preferential_service_1" alt="preferential service 1">
+                  <div class="preferential-service-description">
+                    <span>映画鑑賞で</span>
+                    <span>通常鑑賞チケット</span>
+                    <span> 2,000円 → 1,000円〜に！</span>
+                  </div>
+                </a>
+              </li>
+            </div>
+          </div> #}
+        </li>
+        <li class="card-type25">
+          <div class="card-heading">
+            <span class="card-index">特長②</span>
+            <h3 class="card-issue-title">完全アウトソーシングで、手間いらず</h3>
+          </div>
+          <div class="triangle"></div>
+          <h1 class="card-solution-title">新たな業務が増える心配はありません。</h1>
+          <ul class="card-solution-content__text">
+            <li>「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので</li>
+            <li>導入事業者様に業務をご負担いただく必要はございません。</li>
+          </ul>
+        </li>
+        <li class="card-type25">
+          <div class="card-heading">
+            <span class="card-index">特長③</span>
+            <h3 class="card-issue-title">初めてでも導入しやすい料金プラン</h3>
+          </div>
+          <div class="triangle"></div>
+          <h1 class="card-solution-title">ご利用料金は、<span>月額385円（税込）/1人～</span></h1>
+          <ul class="card-solution-content__text">
+            <li>お手頃な月会費で、はじめての福利厚生導入でも気軽に利用できる料金プランです。法人向け/個人事業主向けプランをご用意しています。</li>
+            <li> 詳しい料金プランを知りたい方は <a href="#">サービス資料をダウンロード</a>してご覧ください。</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
 
   <section class="section-quinary fadein">
     <div class="ttl-notice">法人向け優待サポート</div>
@@ -248,7 +339,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s1"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_1.png" alt="welfare support 1">
+                </div>
                 <ul class="card-description">
                   <li class="yellow-underline">最大<span class="descript-1">10%OFF</span></li>
                 </ul>
@@ -264,7 +357,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s2"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_2.png" alt="welfare support 2">
+                </div>
                 <ul class="card-description">
                   <li class="yellow-underline">経費削減につながる</li>
                   <li>通信プランをご提案</li>
@@ -281,7 +376,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s3"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_3.png" alt="welfare support 3">
+                </div>
                 <ul class="card-description">
                   <li>サービスご利用手数料</li>
                   <li class="yellow-underline"><span class="descript-1">0.3%</span><span class="descript-3">優遇</span>
@@ -298,7 +395,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s4"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_4.png" alt="welfare support 4">
+                </div>
                 <ul class="card-description">
                   <li>成約で</li>
                   <li><span class="descript-4 yellow-underline">ギフト券プレゼント</span></li>
@@ -314,7 +413,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s5"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_5.png" alt="welfare support 5">
+                </div>
                 <ul class="card-description">
                   <li><span class="descript-4 yellow-underline">経費削減につながる</span></li>
                   <li>複合機をご提案</li>
@@ -331,7 +432,9 @@ link: "#material"
                 </h4>
               </div>
               <div class="card-container">
-                <div class="card-image s6"></div>
+                <div class="card-image">
+                  <img src="/assets/img/saison_welfare/welfare_support_6.png" alt="welfare support 6">
+                </div>
                 <ul class="card-description">
                   <li>オフィスのITサポート</li>
                   <li><span class="descript-4 yellow-underline">2ヵ月間無料</span></li>
@@ -452,7 +555,7 @@ link: "#material"
                 <div class="card__box--ttl">サービス内容について詳しく知りたい方はこちら</div>
                 <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact1.png"/>
+                    <img src="/assets/img/payment_com/payment_contact1.png" />
                   </div>
                   <div class="card__box--txt">
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
@@ -460,24 +563,24 @@ link: "#material"
                 </div>
                 <div><a class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
               </summary>
-          </div>
-          <div href="#" class="card">
-            <summary class="card__box">
-              <div class="card__box--ttl">利用イメージを知りたい方はこちら</div>
-              <div class="card__box--cont">
+            </div>
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">利用イメージを知りたい方はこちら</div>
+                <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact2.png"/>
+                    <img src="/assets/img/payment_com/payment_contact2.png" />
                   </div>
                   <div class="card__box--txt">
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-              <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
-            </summary>
+                <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
+              </summary>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 </main>
 {% endblock %}
